added some text

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nebulae by Jiwan</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+<h1>Nebulae</h1>
+  <h2>What are Nebulae?</h2>
+    <p>Nebulae are large clouds of cosmic gas and dust in space.</p>
+  <h2>How are nebulae formed?</h2>
+    <p>Nebulae are formed when a star collapses on itself causing an explosion</p>
 </body>
 </html>
