--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <p>Nebulae are large clouds of cosmic gas and dust in space.</p>
   <h2>How are nebulae formed?</h2>
     <p>Nebulae are formed when a star collapses on itself causing an explosion</p>
+  <h2>What do Nebulae do?</h2>
+    <p>Nebulae act as "Stellar nurseries", providing gas and dust which new stars and planetry systems form.</p>
+    
 </body>
 </html>
