added some code
ello

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <h1>Nebulae</h1>
   <h2>What are Nebulae?</h2>
     <p>Nebulae are large clouds of cosmic gas and dust in space.</p>
-  <h2>How are nebulae formed?</h2>
+  <h2>How are Nebulae formed?</h2>
     <p>Nebulae are formed when a star collapses on itself causing an explosion</p>
+  <h2>What do Nebulae do?</h2>
+    <p>Nebulae help make planets and stars from gas and cosmic dust, this also gives them the name "Cosmic Nurseries"</p>
 </body>
 </html>
