added more links

--- a/Reflection.html
+++ b/Reflection.html
@@ -3,3 +3,6 @@
     <title>Reflection Nebula</title>
     <link rel="stylesheet" href="style.css"/>
  </head>
+ <body>
+    <a href="index.html">Back</a> 
+ </body>
