--- a/Supernova.html
+++ b/Supernova.html
@@ -3,3 +3,6 @@
     <title>Supernova Remnent</title>
     <link rel="stylesheet" href="style.css"/>
  </head>
+ <body>
+    <a href="index.html">Back</a> 
+ </body>
