--- a/Dark.html
+++ b/Dark.html
@@ -4,5 +4,7 @@
     <link rel="stylesheet" href="style.css"/>
  </head>
  <body>
-    <a href="index.html">Back</a> 
+   <a href="index.html">Back</a> 
+    <h1>What are Dark Nebulae</h1>
+   <p>A dark nebula or absorption nebula is a type of interstellar cloud, particularly molecular clouds, that is so dense that it obscures the visible wavelengths of light from objects behind it, such as background stars and emission or reflection nebulae. The extinction of the light is caused by interstellar dust grains in the coldest, densest parts of molecular clouds. Clusters and large complexes of dark nebulae are associated with Giant Molecular Clouds. Isolated small dark nebulae are called Bok globules. Like other interstellar dust or material, the things it obscures are visible only using radio waves in radio astronomy or infrared in infrared astronomy.</p>
  </body>
