--- a/Emission.html
+++ b/Emission.html
@@ -4,5 +4,7 @@
     <link rel="stylesheet" href="style.css"/>
  </head>
  <body>
-   <a href="index.html">Back</a> 
+  <a href="index.html">Back</a> 
+   <h1>What is a Emission Nebula?</h1>
+  <p>An emission nebula is a nebula formed of ionized gases that emit light of various wavelengths. The most common source of ionization is high-energy ultraviolet photons emitted from a nearby hot star. Among the several different types of emission nebulae are H II regions, in which star formation is taking place and young, massive stars are the source of the ionizing photons; and planetary nebulae, in which a dying star has thrown off its outer layers, with the exposed hot core then ionizing them.</p>
  </body>
