--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
 <body>
 <h1>Nebulae</h1>
   <h2>What are Nebulae?</h2>
-    <p>Nebulae are large clouds of cosmic gas and dust in space.</p>
+    <p>A nebula (Latin for 'cloud, fog')is a distinct luminescent part of interstellar medium, which can consist of ionized, neutral, or molecular hydrogen and also cosmic dust. Nebulae are often star-forming regions. In these regions, the formations of gas, dust, and other materials "clump" together to form denser regions, which attract further matter and eventually become dense enough to form stars. The remaining material is then thought to form planets and other planetary system objects.</p>
   <h2>How are Nebulae formed?</h2>
-    <p>Nebulae are formed when a star collapses on itself causing an explosion</p>
+    <p>There are a variety of formation mechanisms for the different types of nebulae. Some nebulae form from gas that is already in the interstellar medium while others are produced by stars. Examples of the former case are giant molecular clouds, the coldest, densest phase of interstellar gas, which can form by the cooling and condensation of more diffuse gas. Examples of the latter case are planetary nebulae formed from material shed by a star in late stages of its stellar evolution.</p>
+    <p>Other nebulae form as the result of supernova explosions; the death throes of massive, short-lived stars. The materials thrown off from the supernova explosion are then ionized by the energy and the compact object that its core produces. One of the best examples of this is the Crab Nebula, in Taurus. The supernova event was recorded in the year 1054 and is labeled SN 1054. The compact object that was created after the explosion lies in the center of the Crab Nebula and its core is now a neutron star.</p>
   <h2>What do Nebulae do?</h2>
-<<<<<<< HEAD
-    <p>Nebulae act as "Stellar nurseries", providing gas and dust which new stars and planetry systems form.</p>
-    
-=======
-    <p>Nebulae help make planets and stars from gas and cosmic dust, this also gives them the name "Cosmic Nurseries"</p>
+    <p>Nebulae primarily act as cosmic nurseries, providing the raw materials (gas and dust) and conditions for gravity to form new stars and planetary systems. They also mark the death of stars, dispersing their stellar material into space as some stars shed outer layers or explode as supernovae.</p>
   <h2>types of Nebulae</h2>
     <p>there are 5 types of Nebulae</p>
       <a href="Emission.html">Emission Nebula</a>
@@ -29,6 +26,7 @@
       <a href="Reflection.html">Reflection Nebula</a>
       <br>
       <a href="Planetary.html">Planetary Nebula</a>
->>>>>>> 638dc9899e95a0f3e947285bc95748eed8ef5a68
+  <h3>Websites used for the information</h3>
+    <a href="https://en.wikipedia.org/wiki/Nebula">Nebula-Wikipedia</a>
 </body>
 </html>
