--- a/Planetary.html
+++ b/Planetary.html
@@ -5,4 +5,6 @@
  </head>
  <body>
     <a href="index.html">Back</a> 
+    <h1>What are Planetary Nebulae?</h1>
+    <p>A planetary nebula is a type of emission nebula consisting of an expanding, glowing shell of ionized gas ejected from red giant stars late in their lives.</p>
  </body>
