--- a/Reflection.html
+++ b/Reflection.html
@@ -5,4 +5,6 @@
  </head>
  <body>
     <a href="index.html">Back</a> 
+    <h1>What are Reflection Nebulae?</h1>
+    <p>In astronomy, reflection nebulae are clouds of interstellar dust which might reflect the light of a nearby star or stars. The energy from the nearby stars is insufficient to ionize the gas of the nebula to create an emission nebula, but is enough to give sufficient scattering to make the dust visible. Thus, the frequency spectrum shown by reflection nebulae is similar to that of the illuminating stars. Among the microscopic particles responsible for the scattering are carbon compounds (e. g. diamond dust) and compounds of other elements such as iron and nickel. The latter two are often aligned with the galactic magnetic field and cause the scattered light to be slightly polarized.</p>
  </body>
